# scanner-soundboard

./: Cargo.toml  Cross.toml  README.md  config.toml
src/: audio.rs  config.rs  main.rs
