[package]
name = "scanner-soundboard"
version = "0.2.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
description = "Trigger sounds via RFID tags or barcodes"
readme = "README.md"
homepage = "https://homework.nwsnet.de/releases/9b23/#scanner-soundboard"
repository = "https://github.com/homeworkprod/scanner-soundboard"
license = "MIT"
keywords = ["audio", "barcode", "rfid"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
evdev = { version = "0.12.1" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
execute = "0.2.13"
